--- a/client/src/stylesheets/Shop.css
+++ b/client/src/stylesheets/Shop.css
@@ -1,5 +1,5 @@
 #shop-header {
-    background-image: url("img/banner/b1.jpg");
+    background-image: url("../../public/img/banner/b1.jpg");
 }
 
 #pagination {
