--- a/client/src/index.css
+++ b/client/src/index.css
@@ -56,6 +56,7 @@ p {
 }
 
 button.base,
+button.white,
 button.clear {
   font-size: 14px;
   font-weight: 600;
@@ -72,6 +73,15 @@ button.base {
   background-color: #088178;
 }
 
+button.base:hover {
+  filter: brightness(.9);
+}
+
+button.white {
+  color: #000;
+  background-color: #fff;
+}
+
 button.clear {
   color: #fff;
   padding: 11px 18px;
@@ -80,6 +90,7 @@ button.clear {
   background-color: transparent;
 }
 
+.plain-anchor,
 .plain-anchor a {
   color: #222;
   text-decoration: none;
