--- a/admin/src/stylesheets/Product.css
+++ b/admin/src/stylesheets/Product.css
@@ -1,15 +1,15 @@
-#user .wrapper header {
+#product .wrapper header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-bottom: 1.5rem;
 }
 
-#user .wrapper header h1 {
+#product .wrapper header h1 {
     font-weight: 700;
 }
 
-#user .wrapper header a {
+#product .wrapper header a {
     width: 6rem;
     color: #fff;
     font-size: 1rem;
@@ -17,20 +17,26 @@
     background-color: #088178;
 }
 
-#user .wrapper header a:hover {
+#product .wrapper header a:hover {
     filter: brightness(.9);
 }
 
-#user .wrapper .bio {
+#product .item {
     height: 100%;
 }
 
-#user .user-details {
+#product .item .card-body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+#product .item .details {
     display: flex;
     align-items: center;
 }
 
-#user .user-details img {
+#product .item .details img {
     width: 50px;
     height: 50px;
     margin-right: 1.5rem;
@@ -38,74 +44,60 @@
     object-fit: cover;
 }
 
-#user .user-details .user {
-    display: flex;
-    flex-direction: column;
-}
-
-#user .user-details .user .name {
+#product .item .details .name,
+#product .item .data .info span:nth-child(1) {
     font-weight: 600;
 }
 
-#user .user-details .user .job-title {
-    font-weight: 300;
-}
-
-#user .account-details h4 {
-    color: rgb(175, 170, 170);
-    font-weight: 600;
-    margin-top: 1.25rem;
-}
-
-#user .account-details .info {
+#product .item .data .info {
+    width: 100%;
     display: flex;
-    align-items: center;
-    color: #444;
-    margin: 1.5rem 0;
+    justify-content: space-between;
+    margin-bottom: .8rem;
 }
 
-#user .account-details .info i {
-    margin-right: .8rem;
-}
-
-#user .user-update h3 {
+#product .product-update h3 {
     font-weight: 700;
 }
 
-#user .user-update .bio-update {
+#product .product-update .item-update {
     display: flex;
     flex-direction: column;
     margin-bottom: 1rem;
 }
 
-#user .user-update .bio-update > input {
-    width: 80%;
+#product .product-update .item-update > input {
+    width: 85%;
     height: 2rem;
     border: none;
     border-bottom: 1px solid #dad8d8;
 }
 
-#user .user-update .upload {
+#product .product-update .item-update > select {
+    width: 85%;
+}
+
+#product .product-update .upload {
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
 
-#user .user-update .img-upload img {
+#product .product-update .img-upload img {
     width: 100px;
     height: 100px;
-    border-radius: 5px;
+    border-radius: 100px;
     object-fit: cover;
     margin-right: 1.5rem;
 }
 
-#user .user-update .img-upload label i {
+#product .product-update .img-upload label i {
     font-size: 1.5rem;
     cursor: pointer;
 }
 
-#user .user-update .upload button {
+#product .product-update .upload button {
     color: aliceblue;
     padding: .5rem;
     margin-bottom: 1rem;
@@ -115,6 +107,6 @@
     transition: .3s ease;
 }
 
-#user .user-update .upload button:hover {
+#product .product-update .upload button:hover {
     background-color: rgb(12, 12, 167);
 }
