restructure app to import images from assets folder

--- a/client/src/stylesheets/About.css
+++ b/client/src/stylesheets/About.css
@@ -1,5 +1,5 @@
 #about-header {
-    background-image: url("../../public/img/about/banner.png");
+    background-image: url(../assets/img/about/banner.png);
 }
 
 #about .image img {
