--- a/client/src/stylesheets/Blog.css
+++ b/client/src/stylesheets/Blog.css
@@ -1,5 +1,5 @@
 #blog-header {
-    background-image: url("../../public/img/banner/b19.jpg");
+    background-image: url(../assets/img/banner/b19.jpg);
 }
 
 #blogs .blog {
