--- a/client/src/stylesheets/Cart.css
+++ b/client/src/stylesheets/Cart.css
@@ -1,5 +1,5 @@
 #cart-header {
-    background-image: url("../../public/img/about/banner.png");
+    background-image: url(../assets/img/about/banner.png);
 }
 
 #cart > div {
