--- a/client/src/stylesheets/Contact.css
+++ b/client/src/stylesheets/Contact.css
@@ -1,5 +1,5 @@
 #contact-header {
-    background-image: url("../../public/img/about/banner.png");
+    background-image: url(../assets/img/about/banner.png);
 }
 
 #contact .details h2,
