--- a/admin/src/App.css
+++ b/admin/src/App.css
@@ -1,10 +1,20 @@
-#main > div > div.col-3.col-xxl-2 {
-    height: calc(100vh - 48px);
-    padding-top: 122px;
-    position: sticky;
-    top: 0;
+@media only screen and (max-width: 991px) {
+    #main .sidebar-col {
+        padding-top: 78px;
+    }
+    #main .content-col {
+        padding-top: 1rem;
+    }
 }
 
-#main > div > div.col-9.col-xxl-10.px-4 {
-    padding-top: 122px;
+@media only screen and (min-width: 992px) {
+    #main .sidebar-col {
+        height: calc(100vh - 48px);
+        padding-top: 122px;
+        position: sticky;
+        top: 0;
+    }
+    #main .content-col {
+        padding-top: 122px;
+    }
 }
