--- a/admin/src/stylesheets/Home.css
+++ b/admin/src/stylesheets/Home.css
@@ -18,7 +18,7 @@
 }
 
 #topstats .stats .amount {
-    font-size: 1.9rem;
+    font-size: 1.5rem;
     font-weight: 700;
 }
 
@@ -33,7 +33,7 @@
 }
 
 #topstats .card-body footer {
-    font-size: 1rem;
+    font-size: .9rem;
     color: gray;
 }
 
@@ -51,7 +51,7 @@
 
 #widgets .widget-sm ul li {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     margin: .5rem 0;
 }
@@ -60,6 +60,7 @@
 #widgets .widget-lg table tbody td img {
     width: 50px;
     height: 50px;
+    border-radius: 50%;
     object-fit: cover;
 }
 
@@ -68,27 +69,28 @@
     flex-direction: column;
 }
 
-#widgets .widget-sm ul li .username {
+#widgets .widget-sm ul li .name {
     font-weight: 600;
 }
 
-#widgets .widget-sm ul li .job-title {
+#widgets .widget-sm ul li .role {
     font-weight: 300;
 }
 
-#widgets .widget-sm ul li button {
+#widgets .widget-sm ul li a {
     color: #555;
     padding: 7px 10px;
     border: none;
     border-radius: 6px;
     background-color: #eeeef7;
+    text-decoration: none;
 }
 
-#widgets .widget-sm ul li button:hover {
+#widgets .widget-sm ul li a:hover {
     background-color: rgb(235, 235, 250);
 }
 
-#widgets .widget-sm ul li button i {
+#widgets .widget-sm ul li a i {
     font-size: 1rem;
 }
 
@@ -96,21 +98,11 @@
     height: 100%;
 }
 
-#widgets .widget-lg table {
-    border-collapse: separate;
-    border-spacing: 1.2rem;
-}
-
-#widgets .widget-lg thead td {
-    font-size: 1.2rem;
-    font-weight: 700;
-}
-
 #widgets .widget-lg tbody td img {
-    margin-right: 1.5rem;
+    margin-right: 1rem;
 }
 
-#widgets .widget-lg tbody .username {
+#widgets .widget-lg tbody .name {
     font-weight: 600;
 }
 
