--- a/client/src/index.css
+++ b/client/src/index.css
@@ -45,3 +45,10 @@ button:disabled {
   opacity: 0.5;
   pointer-events: none;
 }
+
+@media only screen and (max-width: 767px) {
+  h2 {
+    font-size: 25px;
+    line-height: normal;
+  }
+}
