--- a/client/src/stylesheets/About.css
+++ b/client/src/stylesheets/About.css
@@ -6,6 +6,40 @@
     width: 100%;
 }
 
+#about .wrapper.story {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+#about .wrapper > p {
+    text-align: justify;
+}
+
+#about .wrapper .marquee {
+    background-color: #ccc;
+    white-space: nowrap;
+    box-sizing: border-box;
+    overflow: hidden;
+}
+
+#about .wrapper .marquee p {
+    display: inline-block;
+    font-weight: 600;
+    padding-left: 100%;
+    animation: marquee 15s linear infinite;
+}
+
+@keyframes marquee {
+    0% {
+        transform: translate(0, 0);
+    }
+    100% {
+        transform: translate(-100%, 0);
+    }
+}
+
 #app .heading h2 a {
     color: #088178;
     text-decoration: none;
