--- a/client/src/stylesheets/Featured.css
+++ b/client/src/stylesheets/Featured.css
@@ -29,7 +29,7 @@
 }
 
 .products .product .desc {
-    padding: 10px 0;
+    padding: 10px 0 0 0;
     text-align: start;
 }
 
@@ -62,6 +62,7 @@
 }
 
 .products .product button {
+    display: inherit;
     border: none;
 }
 
