--- a/admin/src/stylesheets/Home.css
+++ b/admin/src/stylesheets/Home.css
@@ -43,6 +43,11 @@
     font-weight: 700;
 }
 
+#widgets .widget-sm,
+#widgets .widget-lg {
+    height: 100%;
+}
+
 #widgets .widget-sm ul {
     padding: 0;
     margin: 0;
@@ -94,10 +99,6 @@
     font-size: 1rem;
 }
 
-#widgets .widget-lg {
-    height: 100%;
-}
-
 #widgets .widget-lg tbody td img {
     margin-right: 1rem;
 }
@@ -106,18 +107,22 @@
     font-weight: 600;
 }
 
+#widgets .widget-lg tbody a {
+    text-decoration: none;
+}
+
 #widgets .widget-lg tbody button {
     padding: 5px 7px;
     border: none;
     border-radius: 6px;
 }
 
-#widgets .widget-lg tbody button.approved {
+#widgets .widget-lg tbody button.delivered {
     color: #3bb077;
     background-color: #e5faf2;
 }
 
-#widgets .widget-lg tbody button.declined {
+#widgets .widget-lg tbody button.canceled {
     color: #d95087;
     background-color: #fff0f1;
 }
