--- a/client/src/stylesheets/Navbar.css
+++ b/client/src/stylesheets/Navbar.css
@@ -107,6 +107,10 @@
     z-index: 99;
 }
 
+#user-alert .alert {
+    display: flex;
+}
+
 @media only screen and (max-width: 1100px) {
     #nav {
         padding: 1rem 4rem;
@@ -178,5 +182,17 @@
         top: 30px;
         left: 30px;
         cursor: pointer;
+    }
+}
+
+@media only screen and (max-width: 575px) {
+    #user-alert {
+        min-width: 80%;
+    }
+}
+
+@media only screen and (max-width: 375px) {
+    #user-alert {
+        min-width: 90%;
     }
 }
