--- a/admin/src/stylesheets/Home.css
+++ b/admin/src/stylesheets/Home.css
@@ -99,6 +99,10 @@
     font-size: 1rem;
 }
 
+#widgets .widget-lg table {
+    min-width: 700px;
+}
+
 #widgets .widget-lg tbody td img {
     margin-right: 1rem;
 }
